# test_SYCL

./: .gitignore  README.md
hello_sycl/: CMakeLists.txt
hello_sycl/src/: hello_sycl.cpp  tbb-task-sycl.cpp
